dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/console.h)

AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM

dnl All versioning is done via the following line
AM_INIT_AUTOMAKE(Licq-Console, 0.21)
AM_CONFIG_HEADER(config.h)

dnl Chuck #defines for PACKAGE and VERSION into config.h
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_DEFINE_UNQUOTED(INT_VERSION,$INT_VERSION)

dnl Also substitute PACKAGE and VERSION in the AC_OUTPUT files
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
LICQ_CXX_FLAGS
AC_PROG_CXXCPP
AC_ISC_POSIX
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PATH_PROG(PROG_STRIP,strip,:)
AC_PATH_PROG(PROG_SIZE,size,:)

dnl libtool checks
AC_LIBTOOL_DLOPEN
AC_DISABLE_STATIC
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(errno.h dirent.h locale.h malloc.h pwd.h sys/time.h)
AC_HEADER_TIME
AC_SYS_ERRLIST

if test "$have_licq_inc" = no; then
  AC_MSG_ERROR([

I can't find the Licq header files.
You must unpack this archive into the plugins/ directory off of the
main Licq source tree.  In other words, we should be in
/some/dir/licq-0.xx/plugins/console-0.xx right now.
])
fi


dnl Checks for library functions.
#AC_CHECK_LIB(xnet,inet_addr)
#AC_CHECK_LIB(socket, socket)
#AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_FUNCS(inet_addr inet_aton strerror)

dnl Switch to C++ mode and check for needed C++ headers
AC_LANG_SAVE
AC_LANG_CPLUSPLUS

AC_CHECK_HEADER(vector.h,,
  AC_MSG_ERROR(You need to have the libstdc++ headers installed))

AC_LANG_RESTORE

dnl check for ncurses
AC_CHECK_LIB(ncurses, initscr,,
  AC_MSG_ERROR([

I can't find the ncurses library. This is needed if you want
to compile this plugin. Sorry.
]))

AC_OUTPUT(
  src/Makefile \
  Makefile
)

