AC_INIT(src/contact_list.cpp)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(GtkPlugin, 0.0.1)

AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_CXX
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

#ALL_LINGUIAS="es"
#AM_GNU_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
src/Makefile
])
