AC_INIT(src/contact_list.cpp)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(GtkPlugin, 0.0.1)

AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_CXX
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM

dnl libtool stuff
AC_LIBTOOL_DLOPEN
AC_DISABLE_STATIC
AM_PROG_LIBTOOL

dnl Check for header files
AC_CHECK_LICQ

if test "$have_licq_inc" = no; then
  AC_MSG_ERROR([

I can't find the Licq header files.
You must unpack this archive into the plugins/ directory off of the
main Licq source tree.  In other words, we should be in
/some/dir/licq-0.xx/plugins/jons-gtk-gui right now.
])
fi

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
  Makefile
  src/Makefile
])
